2004-07-02  Karl Berry  <karl@gnu.org>

	* makeinfo/makinfo.c (execute_string): don't worry about
		mismatched multiline commands if executing_macro.

2004-06-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex: Various doc fixes.
	(\dosubindsanitize): propagate the same penalty
	>10000, don't just use \nobreak.
	(\sectionheading): insert a final penalty of
	10001, not 10000.  This causes \aboveenvbreak to
	insert \parskip glue, cancelling the
	\vskip-\parskip done here.  Otherwise, when (e.g.)
	@section is followed immediately by @example, the
	example can be shrunk up above the section title.

2004-06-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\commondummies, \indexnofonts): dummy-up @comma.
	Report from Arnold.

2004-06-06  Karl Berry  <karl@gnu.org>

	* makeinfo/index.c (index_add_arg): ensure all elements are always
	initialized, including output_file, section, and section_name.
	(cm_printindex): don't pass index->output_file to
	add_html_block_elt_args if it is null.  Also do
	not pass spurious extra index_name argument.

	* makeinfo/makeinfo.c (add_char): don't call html_output_head if
	only_macro_expansion (e.g., a macro call in the
	Top menu).  From: Yuri D'Elia <wavexx@yuv.info>,
	05 Jun 2004 21:11:00 +0200.

2004-06-03  Karl Berry  <karl@gnu.org>

	* info/session.c (info_menu_digit): use menu, rather than entry, to
	avoid seg fault on "0" (the last item),
	since menu has already been checked.
	From: Malcolm Rowe <malcolm-gnu@farside.org.uk>,
	02 Jun 2004 21:32:37 +0100.

2004-05-17  Karl Berry  <karl@gnu.org>

	* util/gendocs.sh, gendocs_template: use package.format.tar.gz
		consistently.  Before, -, _, and . were all used.

2004-05-16  Karl Berry  <karl@gnu.org>

	* lib/Makefile.am (libtxi_a_SOURCES): include strcase.h.
	From: "Gerrit P. Haase" <gp@familiehaase.de>,
	15 May 2004 21:50:52 +0200.

	* util/gendocs.sh: force HTML output name, otherwise Emacs fails
        with its "@setfilename ../...".

2004-05-04  Karl Berry  <karl@gnu.org>
